In machine_learning_template.ipynb, in EDA of Categorical Column Frequencies section, differentiate code for single column vs multiple columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -757,10 +757,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5735f52c-eb16-4658-a566-0fcebf883180",
+   "metadata": {},
+   "source": [
+    "#### Single Column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d9b9fe5a-ecf0-4388-8a9d-88590fa48f89",
    "metadata": {},
    "source": [
-    "Absolute and relative frequencies of a categorical colum:"
+    "Absolute and relative frequencies of a single categorical colum:"
    ]
   },
   {
@@ -806,6 +814,22 @@
     "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c44f3be-22bb-498c-9560-8a53cbe51cee",
+   "metadata": {},
+   "source": [
+    "#### Multiple Columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1b9fb2d-babe-4c40-a375-d697bc98ee5f",
+   "metadata": {},
+   "source": [
+    "Absolute and relative frequencies of multiple categorical colums:"
    ]
   },
   {
