In machine_learning_template.ipynb, in EDA of Categorical Column Frequencies section, add code for multiple columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -833,6 +833,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c4b6e5-237c-47df-8d5d-862bd031ef1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize dictionaries to store frequencies for multiple categorical columns\n",
+    "absolute_frequencies_dict = {}\n",
+    "relative_frequencies_dict = {}\n",
+    "\n",
+    "# Iterate over the categorical columns\n",
+    "for categorical_column in categorical_columns:\n",
+    "    # Calculate absolute and relative frequencies \n",
+    "    absolute_frequencies = df[categorical_column].value_counts()\n",
+    "    relative_frequencies = absolute_frequencies / absolute_frequencies.sum() * 100\n",
+    "\n",
+    "    # Store frequencies\n",
+    "    absolute_frequencies_dict[categorical_column] = absolute_frequencies\n",
+    "    relative_frequencies_dict[categorical_column] = relative_frequencies\n",
+    "\n",
+    "    # Show frequencies\n",
+    "    print(categorical_column.upper())\n",
+    "    print(f\"Absolute frequencies:\\n {absolute_frequencies}\\n\")\n",
+    "    print(f\"Relative frequencies (%):\\n {relative_frequencies.round(1)}\")\n",
+    "    print(\"=\" * 50 + \"\\n\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
