In machine_learning_template.ipynb, in EDA of Categorical Column Frequencies section, add bar plot matrix

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -862,6 +862,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7d3edff6-44e4-4e07-abd7-38d1fcb178cf",
+   "metadata": {},
+   "source": [
+    "Bar plot matrix that shows frequencies for multiple categorical columns.  \n",
+    "Example code for 5 bar plots in a 2x3 matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "651f74b5-524c-4517-97bb-af5d7a401c5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Iterate over the categorical columns\n",
+    "for i, categorical_column in enumerate(categorical_columns):\n",
+    "    # Create a subplot in a 2x3 grid (current subplot i+1 because subplot indices start at 1)\n",
+    "    plt.subplot(2, 3, i + 1)\n",
+    "    \n",
+    "    # Calculate frequencies for the current column\n",
+    "    absolute_frequencies = df[categorical_column].value_counts()\n",
+    "    \n",
+    "    # Create bar plot for the current column\n",
+    "    sns.barplot(x=absolute_frequencies.index, y=absolute_frequencies.values, estimator=np.median, ci=None)\n",
+    "    \n",
+    "    # Add title and axes labels\n",
+    "    plt.title(categorical_column.title())\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "    # Rotate x-axis tick labels by 45 degrees\n",
+    "    plt.xticks(rotation=45)\n",
+    "\n",
+    "# Adjust layout to prevent overlap\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
