In machine_learning_template.ipynb, in EDA section, add correlations

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -906,6 +906,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05bed553-89be-4154-9775-d784adfc100f",
+   "metadata": {},
+   "source": [
+    "## Correlations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6dedb34a-4995-4e6d-9024-b526c26002a8",
+   "metadata": {},
+   "source": [
+    "Correlation matrix:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30a94e3f-694d-4b05-9436-fbeaf82f748f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine numerical and boolean columns for correlation analysis\n",
+    "combined_columns = numerical_columns + boolean_columns\n",
+    "\n",
+    "# Calculate the correlation matrix \n",
+    "correlation_matrix = df[combined_columns].corr()\n",
+    "\n",
+    "# Round correlations to 2 decimals\n",
+    "correlation_matrix = round(correlation_matrix, 2)\n",
+    "\n",
+    "# Create an upper triangle mask (k=1 excludes the diagonal)\n",
+    "mask = np.triu(np.ones(correlation_matrix.shape), k=1).astype(bool)\n",
+    "\n",
+    "# Set upper triangle to NaN to avoid redundant information\n",
+    "correlation_matrix[mask] = np.nan\n",
+    "\n",
+    "# Show correlation matrix\n",
+    "correlation_matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
