In machine_learning_template.ipynb, in EDA > Correlations section, add correlation heatmap

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -948,6 +948,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83902fe5-8ac2-4f64-bf9b-33e84fefb781",
+   "metadata": {},
+   "source": [
+    "Correlation heatmap:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f6eda3-d6aa-4578-8f55-d80d3e7153aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the figure size\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "\n",
+    "# Create heatmap\n",
+    "sns.heatmap(\n",
+    "    correlation_matrix, \n",
+    "    cmap=\"viridis\",  # Color map choice\n",
+    "    annot=True,  # Show numbers\n",
+    "    linewidth=0.5  # Thin white lines between cells\n",
+    ")\n",
+    "\n",
+    "# Add title\n",
+    "plt.title(\"Correlation Heatmap\")\n",
+    "\n",
+    "# Adjust layout to prevent cutting off labels\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Save the heatmap as a .png image\n",
+    "plt.savefig(\"images/correlation_heatmap.png\", bbox_inches=\"tight\", dpi=300)\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
