In machine_learning_template.ipynb, in EDA > Correlations section, handle exceptions when saving correlation heatmap as image

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -978,11 +978,42 @@
     "# Adjust layout to prevent cutting off labels\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Save the heatmap as a .png image\n",
-    "plt.savefig(\"images/correlation_heatmap.png\", bbox_inches=\"tight\", dpi=300)\n",
-    "\n",
     "# Show the plot\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d92936fd-c3a7-4441-83b1-7bca48db2323",
+   "metadata": {},
+   "source": [
+    "Save correlation heatmap as an image:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89a8b750-799b-4b7b-8ba4-7cb2cafc9064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
+    "import os\n",
+    "\n",
+    "# Create images folder if it doesn't exist\n",
+    "os.makedirs(\"images\", exist_ok=True)\n",
+    "\n",
+    "# Save the heatmap \n",
+    "try:\n",
+    "    # Construct full file path\n",
+    "    image_path = os.path.join(\"images\", \"correlation_heatmap.png\") \n",
+    "    \n",
+    "    # Save the heatmap as a .png image \n",
+    "    plt.savefig(image_path, bbox_inches=\"tight\", dpi=300)\n",
+    "    print(f\"Correlation heatmap saved successfully to {image_path}\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error saving correlation heatmap: {e}\")"
    ]
   },
   {
