In machine_learning_template.ipynb, in EDA > Numerical Label > Histogram section, update code and documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -565,15 +565,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create histogram \n",
+    "# Create histogram  of numerical label\n",
     "sns.histplot(df[\"numerical_label\"])\n",
     "\n",
-    "# Add axes labels \n",
+    "# Add title and axes labels \n",
+    "plt.title(\"Distribution of numerical_label\")\n",
     "plt.xlabel(\"numerical_label\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "\n",
-    "# Add title\n",
-    "plt.title(\"Distribution of numerical_label\")\n",
     "\n",
     "# Show the plot\n",
     "plt.show()"
