In machine_learning_template.ipynb, in EDA > Categorical Column section, change section header to Categorical Columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -742,7 +742,7 @@
    "id": "c01f9891-a8ab-4a10-9351-2be2e20a1e8e",
    "metadata": {},
    "source": [
-    "## Categorical Column"
+    "## Categorical Columns"
    ]
   },
   {
