In machine_learning_template.ipynb, in EDA > Correlations section, update documentation comments for saving correlation heatmap

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -998,16 +998,20 @@
     "# Imports\n",
     "import os\n",
     "\n",
-    "# Create images folder if it doesn't exist\n",
+    "# Create \"images\" directory if it doesn't exist\n",
     "os.makedirs(\"images\", exist_ok=True)\n",
     "\n",
-    "# Save the heatmap \n",
+    "# Save the heatmap as a .png image\n",
     "try:\n",
     "    # Construct full file path\n",
     "    image_path = os.path.join(\"images\", \"correlation_heatmap.png\") \n",
     "    \n",
-    "    # Save the heatmap as a .png image \n",
-    "    plt.savefig(image_path, bbox_inches=\"tight\", dpi=300)\n",
+    "    # Save the heatmap  \n",
+    "    plt.savefig(\n",
+    "        image_path, \n",
+    "        bbox_inches=\"tight\",  # removes unnecessary whitespace\n",
+    "        dpi=300  # higher image quality\n",
+    "    )\n",
     "    print(f\"Correlation heatmap saved successfully to {image_path}\")\n",
     "\n",
     "except Exception as e:\n",
