In machine_learning_template.ipynb, in data preprocessing section, change subsection header from data type conversion to handling incorrect data types

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -246,7 +246,7 @@
    "id": "eb28c409-34a3-493f-8cd9-856b5c25e0d3",
    "metadata": {},
    "source": [
-    "## Data Type Conversion"
+    "## Handling Incorrect Data Types"
    ]
   },
   {
