--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -517,10 +517,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define numerical, categorical and boolean columns\n",
+    "# Define numerical, categorical and boolean columns (manually)\n",
     "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
     "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
     "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1ce92eb-c2b8-4fcf-83c6-1ae149b0a99a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define numerical, categorical and boolean columns (programmatically)\n",
+    "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
+    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
    ]
   },
   {
