In machine_learning_template.ipynb, in EDA > Column Types section, update code documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -496,7 +496,8 @@
    "id": "571beab2-bbb5-4fba-8143-69b04a5ea2c8",
    "metadata": {},
    "source": [
-    "## Column Types"
+    "## Defining Column Types  \n",
+    "Define numerical, categorical and boolean columns for downstream tasks like exploratory data analysis and machine learning."
    ]
   },
   {
@@ -506,8 +507,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show columns and their data types\n",
+    "# Show columns and their pandas data types\n",
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b14f5252-3567-42a7-8ef2-13f52c6a4ec6",
+   "metadata": {},
+   "source": [
+    "**Option 1: Manually**  \n",
+    "Use this approach for small datasets or when you have specific requirements and need explicit control."
    ]
   },
   {
@@ -517,10 +527,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define numerical, categorical and boolean columns (manually)\n",
+    "# Define columns types manually\n",
     "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
     "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
     "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "919c7d33-ac8c-4385-8d16-8bdab200eeed",
+   "metadata": {},
+   "source": [
+    "**Option 2: Programmatically**  \n",
+    "Use this approach for large datasets or when you want to automate the process."
    ]
   },
   {
@@ -530,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define numerical, categorical and boolean columns (programmatically)\n",
+    "# Define columns types programmatically based on pandas data types\n",
     "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
     "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
     "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
