In machine_learning_template.ipynb, in train-validation-test split section, add code to split the data into X features and y label

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1053,11 +1053,21 @@
   {
    "cell_type": "markdown",
    "id": "e4f4d486-4d2c-4214-a260-ed19c446c41b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Train-Validation-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c905a81-4c0d-4acf-85cd-04f81059d2fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into X features and y label\n",
+    "X = df.drop(\"label\", axis=1)\n",
+    "y = df[\"label\"]"
    ]
   },
   {
