In machine_learning_template.ipynb, in train-validation-test split section, add code to perform the split

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1071,6 +1071,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99b7fc1d-be3a-4623-9e16-aac8e85d3a34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into training and temporary sets (70% train, 30% temporary)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Split the temporary data into validation and test sets (50% each)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a88ff08-9c6f-44a6-ba05-74a1bbe9f0e6",
+   "metadata": {},
+   "source": [
+    "Note: This accomplishes a 70% training, 15% validation and 15% test set size."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
