In machine_learning_template.ipynb, add handling outliers section with subsection to remove outliers using the 3SD method

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -485,6 +485,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "00e082e3-b3ab-4c7b-932b-339610614132",
+   "metadata": {},
+   "source": [
+    "## Handling Outliers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5625577-0d32-402f-bac1-1d4184d765c6",
+   "metadata": {},
+   "source": [
+    "### Remove Outliers Using the 3SD Method  \n",
+    "Remove univariate outliers from a numerical column by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
    "source": [
