In machine_learning_template.ipynb, in handling outliers section, create a custom transformer class to remove outliers using the 3SD method and import sklearn's BaseEstimator and TransformerMixin

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "100528be-33fb-4f95-b8f8-e791de38fe6f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin"
    ]
   },
   {
@@ -499,6 +500,38 @@
    "source": [
     "### Remove Outliers Using the 3SD Method  \n",
     "Remove univariate outliers from a numerical column by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2815589-353e-48a4-8941-4a56b037e33a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a custom transformer class to remove outliers using the 3 SD method\n",
+    "class OutlierRemover3SD(BaseEstimator, TransformerMixin):\n",
+    "    def fit(self, df, numerical_column):\n",
+    "        # Calculate mean, standard deviation, and cutoff values of the numerical column\n",
+    "        self.mean_ = df[numerical_column].mean()\n",
+    "        self.sd_ = df[numerical_column].std()\n",
+    "        self.lower_cutoff_ = self.mean_ - 3 * self.sd_\n",
+    "        self.upper_cutoff_ = self.mean_ + 3 * self.sd_\n",
+    "        print(f\"Lower cutoff for {numerical_column}: {self.lower_cutoff_}\")\n",
+    "        print(f\"Upper cutoff for {numerical_column}: {self.upper_cutoff_}\")\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, df, numerical_column):\n",
+    "        # Apply cutoff values\n",
+    "        mask = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
+    "        # Show number of outliers\n",
+    "        print(f\"{numerical_column} outliers based on 3 SD: {df.shape[0] - df[mask].shape[0]}\")\n",
+    "        # Return DataFrame with outliers removed \n",
+    "        return df[mask]\n",
+    "\n",
+    "    def fit_transform(self, df, numerical_column):\n",
+    "        # Perform both fit and transform \n",
+    "        return self.fit(df, numerical_column).transform(df, numerical_column)"
    ]
   },
   {
