In machine_learning_template.ipynb, in handling outliers section, add example usage code for OutlierRemover3SD

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "100528be-33fb-4f95-b8f8-e791de38fe6f",
    "metadata": {},
    "outputs": [],
@@ -532,6 +532,20 @@
     "    def fit_transform(self, df, numerical_column):\n",
     "        # Perform both fit and transform \n",
     "        return self.fit(df, numerical_column).transform(df, numerical_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e1d2263-e9de-4b53-8ada-61e1cf8433b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize outlier remover \n",
+    "outlier_remover_3sd = OutlierRemover3SD()\n",
+    "\n",
+    "# Remove outliers\n",
+    "df = outlier_remover_3sd.fit_transform(df, \"numerical_column\")"
    ]
   },
   {
