In machine_learning_template.ipynb, in handling outliers section, update notification message on number of outliers removed in OutlierRemover3SD

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -525,7 +525,7 @@
     "        # Apply cutoff values\n",
     "        mask = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
     "        # Show number of outliers\n",
-    "        print(f\"{numerical_column} outliers based on 3 SD: {df.shape[0] - df[mask].shape[0]}\")\n",
+    "        print(f\"{df.shape[0] - df[mask].shape[0]} outliers removed based on {numerical_column} using the 3 SD method.\")\n",
     "        # Return DataFrame with outliers removed \n",
     "        return df[mask]\n",
     "\n",
