In machine_learning_template.ipynb, in handling outliers section, change subsection header from Remove Outliers Using 3SD Method to Remove with 3SD Method and consistently use 3SD instead of 3 SD

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -498,7 +498,7 @@
    "id": "e5625577-0d32-402f-bac1-1d4184d765c6",
    "metadata": {},
    "source": [
-    "### Remove Outliers Using the 3SD Method  \n",
+    "### Remove with 3SD Method  \n",
     "Remove univariate outliers from a numerical column by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column.  "
    ]
   },
@@ -509,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a custom transformer class to remove outliers using the 3 SD method\n",
+    "# Create a custom transformer class to remove outliers using the 3SD method\n",
     "class OutlierRemover3SD(BaseEstimator, TransformerMixin):\n",
     "    def fit(self, df, numerical_column):\n",
     "        # Calculate mean, standard deviation, and cutoff values of the numerical column\n",
@@ -525,7 +525,7 @@
     "        # Apply cutoff values\n",
     "        mask = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
     "        # Show number of outliers\n",
-    "        print(f\"{df.shape[0] - df[mask].shape[0]} outliers removed based on {numerical_column} using the 3 SD method.\")\n",
+    "        print(f\"{df.shape[0] - df[mask].shape[0]} outliers removed based on {numerical_column} using the 3SD method.\")\n",
     "        # Return DataFrame with outliers removed \n",
     "        return df[mask]\n",
     "\n",
