In machine_learning_template.ipynb, in handling outliers section, add subsection to remove outliers with 1.5 IQR method

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -550,6 +550,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a030d86-a4da-4b67-bd83-11dcc2af33ec",
+   "metadata": {},
+   "source": [
+    "### Remove with 1.5 IQR Method  \n",
+    "Remove univariate outliers from a numerical column using the 1.5 interquartile range (IQR) rule. Specifically, a data point is considered an outlier if it falls more than 1.5 interquartile ranges above the third quartile (Q3) or below the first quartile (Q1) of the column.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
    "source": [
