In machine_learning_template.ipynb, in handling outliers with 3SD subsection, show number of outliers during fit, not transform

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -517,21 +517,24 @@
     "        self.sd_ = df[numerical_column].std()\n",
     "        self.lower_cutoff_ = self.mean_ - 3 * self.sd_\n",
     "        self.upper_cutoff_ = self.mean_ + 3 * self.sd_\n",
+    "\n",
+    "        # Create a mask for filtering outliers\n",
+    "        self.mask_ = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
+    "\n",
+    "        # Show cutoff values and number of outliers\n",
     "        print(f\"Lower cutoff for {numerical_column}: {self.lower_cutoff_}\")\n",
     "        print(f\"Upper cutoff for {numerical_column}: {self.upper_cutoff_}\")\n",
+    "        print(f\"{df.shape[0] - df[self.mask_].shape[0]} outliers removed based on {numerical_column} using the 3SD method.\")\n",
+    "  \n",
     "        return self\n",
     "\n",
-    "    def transform(self, df, numerical_column):\n",
-    "        # Apply cutoff values\n",
-    "        mask = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
-    "        # Show number of outliers\n",
-    "        print(f\"{df.shape[0] - df[mask].shape[0]} outliers removed based on {numerical_column} using the 3SD method.\")\n",
-    "        # Return DataFrame with outliers removed \n",
-    "        return df[mask]\n",
+    "    def transform(self, df):\n",
+    "        # Remove outliers based on the mask \n",
+    "        return df[self.mask_]\n",
     "\n",
     "    def fit_transform(self, df, numerical_column):\n",
     "        # Perform both fit and transform \n",
-    "        return self.fit(df, numerical_column).transform(df, numerical_column)"
+    "        return self.fit(df, numerical_column).transform(df)"
    ]
   },
   {
