In machine_learning_template.ipynb, in handling outliers with 1.5 IQR method, create custom transformer class to remove outliers using the 1.5 IQR method

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -561,6 +561,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83870620-24da-4801-9520-ed1a3650a619",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a custom transformer class to remove outliers using the 1.5 IQR method\n",
+    "class OutlierRemoverIQR(BaseEstimator, TransformerMixin):\n",
+    "    def fit(self, df, numerical_column):\n",
+    "        # Calculate quartiles, IQR and cutoff values \n",
+    "        Q1 = df[numerical_column].quantile(0.25)\n",
+    "        Q3 = df[numerical_column].quantile(0.75)\n",
+    "        IQR = Q3 - Q1\n",
+    "        self.lower_cutoff_ = Q1 - 1.5 * IQR\n",
+    "        self.upper_cutoff_ = Q3 + 1.5 * IQR\n",
+    "\n",
+    "        # Create a mask for filtering outliers\n",
+    "        self.mask_ = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
+    "  \n",
+    "        # Show cutoff values and number of outliers\n",
+    "        print(f\"Lower cutoff for {numerical_column}: {self.lower_cutoff_}\")\n",
+    "        print(f\"Upper cutoff for {numerical_column}: {self.upper_cutoff_}\")\n",
+    "        print(f\"{df.shape[0] - df[self.mask_].shape[0]} outliers removed based on {numerical_column} using the 1.5 IQR method.\")\n",
+    "        \n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, df):\n",
+    "        # Remove outliers based on the mask \n",
+    "        return df[self.mask_]\n",
+    "\n",
+    "    def fit_transform(self, df, numerical_column):\n",
+    "        # Perform both fit and transform\n",
+    "        return self.fit(df, numerical_column).transform(df)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
