In machine_learning_template.ipynb, in handling outliers with 1.5 IQR method, add example usage code

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -597,6 +597,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b798816c-e967-4cd5-a68d-a1bbe2028057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize outlier remover \n",
+    "outlier_remover_iqr = OutlierRemoverIQR()\n",
+    "\n",
+    "# Remove outliers\n",
+    "df = outlier_remover_iqr.fit_transform(df, \"numerical_column\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9ca10b19-02a9-4a0f-b543-7374f677d139",
    "metadata": {},
