In machine_learning_template.ipynb, rename section header Model Training to Baseline Model Training

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1224,7 +1224,8 @@
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "# Model Training"
+    "# Baseline Model Training  \n",
+    "Train five baseline models: Regression, support vector machine, random forest, neural network, and XGBoost. "
    ]
   },
   {
