In machine_learning_template.ipynb, in baseline model training section, add code to define models in baseline configurations, lists for storing evaluation metrics and loop through each model

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1230,6 +1230,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c25b7d67-27ed-4716-8c3f-079e2d239339",
+   "metadata": {},
+   "source": [
+    "## Regression Task (Numerical Label)  \n",
+    "Train baseline models for a regression problem, where the goal is to predict a numerical label.  \n",
+    "The model performance will be evaluated using the following metrics:  \n",
+    "- Root Mean Squared Error (RMSE)\n",
+    "- Mean Absolute Percentage Error (MAPE)\n",
+    "- R-squared (R2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6ca118a-6a69-4b27-adbc-4bdc77027ca6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define models with baseline configurations\n",
+    "models = [LinearRegression(), SVR(C=100), RandomForestRegressor(), MLPRegressor(max_iter=1000), XGBRegressor()]\n",
+    "\n",
+    "# Create lists for storing the evaluation metrics (RMSE, MAPE, R2) of each model \n",
+    "rmse_ls = []\n",
+    "mape_ls = []\n",
+    "r2_ls = []\n",
+    "\n",
+    "# Loop through each model\n",
+    "for model in models:\n",
+    "    # Show model\n",
+    "    print(\"=\" * 100)\n",
+    "    print(f\"Model: {model}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02fd119a-14c4-46af-9e3e-facc98438ad0",
    "metadata": {},
    "source": [
