--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1224,7 +1224,7 @@
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "# Baseline Model Training  \n",
+    "# Training Baseline Models   \n",
     "Train five baseline models: Regression, support vector machine, random forest, neural network, and XGBoost. "
    ]
   },
