In machine_learning_template.ipynb, in training baseline models section, add subsection header for classification task (categorical label)

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1265,6 +1265,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e482eca8-6853-44dc-ad83-7f4b4e5a31f8",
+   "metadata": {},
+   "source": [
+    "## Classification Task (Categorical Label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02fd119a-14c4-46af-9e3e-facc98438ad0",
    "metadata": {},
    "source": [
