--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -44,7 +44,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin"
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.neural_network import MLPRegressor"
    ]
   },
   {
