--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -48,7 +48,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.neural_network import MLPRegressor"
+    "from sklearn.neural_network import MLPRegressor\n",
+    "import xgboost as xgb"
    ]
   },
   {
