--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1265,7 +1265,16 @@
     "for model in models:\n",
     "    # Show model\n",
     "    print(\"=\" * 100)\n",
-    "    print(f\"Model: {model}\")"
+    "    print(f\"Model: {model}\")\n",
+    "\n",
+    "    # Scale numerical columns and encode categorical columns \n",
+    "    column_transformer = ColumnTransformer(\n",
+    "        transformers=[\n",
+    "            (\"scaler\", StandardScaler(), numerical_columns),\n",
+    "            (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)\n",
+    "        ],\n",
+    "        remainder=\"passthrough\"  # Include the boolean columns without transformation\n",
+    "    )"
    ]
   },
   {
