--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -44,6 +44,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.svm import SVR\n",
