In machine_learning_template.ipynb, in Training Baseline Models > Regression Task section, create a pipeline

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1276,7 +1276,13 @@
     "            (\"encoder\", OneHotEncoder(drop=None, sparse_output=False), categorical_columns)\n",
     "        ],\n",
     "        remainder=\"passthrough\"  # Include the boolean columns without transformation\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "    # Create a pipeline\n",
+    "    pipeline = Pipeline(steps=[\n",
+    "        (\"column_transformer\", column_transformer),\n",
+    "        (\"model\", model)\n",
+    "    ])"
    ]
   },
   {
