--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -43,10 +43,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
