In machine_learning_template.ipynb, in Training Baseline Models > Regression Task section, add names of baseline models in description

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1232,8 +1232,7 @@
    "id": "da21e2d4-cbd4-42f7-b7d1-f3997b3619f1",
    "metadata": {},
    "source": [
-    "# Training Baseline Models   \n",
-    "Train five baseline models: Regression, support vector machine, random forest, neural network, and XGBoost. "
+    "# Training Baseline Models "
    ]
   },
   {
@@ -1242,7 +1241,13 @@
    "metadata": {},
    "source": [
     "## Regression Task (Numerical Label)  \n",
-    "Train baseline models for a regression problem, where the goal is to predict a numerical label.  \n",
+    "Train baseline models for a regression problem, where the goal is to predict a numerical label. The five baseline models are:\n",
+    "- Linear Regression\n",
+    "- Support Vector Regressor\n",
+    "- Random Forest Regressor\n",
+    "- Multi-Layer Perceptron Regressor\n",
+    "- XGBoost Regressor\n",
+    "\n",
     "The model performance will be evaluated using the following metrics:  \n",
     "- Root Mean Squared Error (RMSE)\n",
     "- Mean Absolute Percentage Error (MAPE)\n",
