In machine_learning_template.ipynb, in Training Baseline Models > Regression Task section, fit the pipeline on training data and predict on validation data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1288,7 +1288,13 @@
     "    pipeline = Pipeline(steps=[\n",
     "        (\"column_transformer\", column_transformer),\n",
     "        (\"model\", model)\n",
-    "    ])"
+    "    ])\n",
+    "\n",
+    "    # Fit the pipeline on the training data\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Predict on the validation data\n",
+    "    y_val_pred = pipeline.predict(X_val)"
    ]
   },
   {
