--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -48,6 +48,7 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_percentage_error, r2_score\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -1294,7 +1295,22 @@
     "    pipeline.fit(X_train, y_train)\n",
     "    \n",
     "    # Predict on the validation data\n",
-    "    y_val_pred = pipeline.predict(X_val)"
+    "    y_val_pred = pipeline.predict(X_val)\n",
+    "\n",
+    "    # Calculate evaluation metrics: RMSE, MAPE, R2\n",
+    "    rmse = mean_squared_error(y_val, y_val_pred, squared=False)\n",
+    "    mape = mean_absolute_percentage_error(y_val, y_val_pred)\n",
+    "    r2 = r2_score(y_val, y_val_pred)\n",
+    "\n",
+    "    # Show evaluation metrics\n",
+    "    print(f\"RMSE: {round(rmse, 2)}\")\n",
+    "    print(f\"MAPE: {round(mape, 2)}\")\n",
+    "    print(f\"R-squared (R²): {round(r2, 2)}\")\n",
+    "\n",
+    "    # Add evaluation metrics to their respective lists\n",
+    "    rmse_ls.append(rmse)\n",
+    "    mape_ls.append(mape)\n",
+    "    r2_ls.append(r2)"
    ]
   },
   {
