In machine_learning_template.ipynb, in Training Baseline Models > Regression Task section, add subsection with helper function for residual plots

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1256,6 +1256,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bc4a506f-0b4a-4aad-bfac-3e68f65f3dea",
+   "metadata": {},
+   "source": [
+    "### Helper Function for Residual Plots  \n",
+    "Creates two plots for predicted vs. actual label and residuals vs. actual label to evaluate model performance and identify potential issues in the model assumptions graphically."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4eb007a-2d89-431e-ab84-60337886ca18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper function to create residual plots\n",
+    "def plot_residuals(y, y_pred):\n",
+    "    # Calculate residuals\n",
+    "    residuals = [actual_value - predicted_value for actual_value, predicted_value in zip(y, y_pred)]\n",
+    "\n",
+    "    # Create a 1x2 grid of subplots\n",
+    "    fig, axes = plt.subplots(1, 2, figsize=(12, 5), dpi=150)\n",
+    "\n",
+    "    # Plot 1: Predicted vs. Actual Label\n",
+    "    axes[0].scatter(y, y_pred)\n",
+    "    axes[0].plot([min(y), max(y)], \n",
+    "                 [min(y), max(y)], \n",
+    "                 color=\"red\", \n",
+    "                 linestyle=\"--\", \n",
+    "                 label=\"Perfect Prediction\")  # Add diagonal reference line\n",
+    "    axes[0].set_title(\"Predicted vs. Actual Label\")\n",
+    "    axes[0].set_xlabel(\"Actual Label\")\n",
+    "    axes[0].set_ylabel(\"Predicted Label\")\n",
+    "    axes[0].grid(True)\n",
+    "    axes[0].legend() \n",
+    "\n",
+    "    # Plot 2: Residuals vs. Actual Label\n",
+    "    axes[1].scatter(y, residuals)\n",
+    "    axes[1].axhline(y=0, color=\"red\", linestyle=\"--\", label=\"Perfect Prediction\")  # Add horizontal reference line\n",
+    "    axes[1].set_xlabel(\"Actual Label\")\n",
+    "    axes[1].set_ylabel(\"Residuals\")\n",
+    "    axes[1].set_title(\"Residuals vs. Actual Label\")\n",
+    "    axes[1].grid(True)\n",
+    "    axes[1].legend() \n",
+    "\n",
+    "    # Adjust layout and display the plots\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36172487-5eb6-495b-910e-aafdf0365a13",
+   "metadata": {},
+   "source": [
+    "### Regression Pipeline"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a6ca118a-6a69-4b27-adbc-4bdc77027ca6",
