In machine_learning_template.ipynb, in EDA > Defining Column Types section, correct typo in documentation comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -663,7 +663,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define columns types manually\n",
+    "# Define column types manually\n",
     "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
     "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
     "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
@@ -685,7 +685,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define columns types programmatically based on pandas data types\n",
+    "# Define column types programmatically based on pandas data types\n",
     "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
     "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
     "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
